change how to calculate the score